data/all-infer-tutorial/command-injection1/infer-out/report.txt
#0
tutorial/command-injection1.c:18: error: Api Misuse
  CmdInjection.
  16.   strncat(command, argv[1], (commandLength - strlen(cat)));
  17. 
  18.   system(command);
        ^
  19.   return (0);
  20. }

Found 1 issue
  Issue Type(ISSUED_TYPE_ID): #
      Api Misuse(API_MISUSE): 1
